--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     </style>
   </head>
   <body>
-    <h1> Hello, I'm Sam Aronson </h1>
-    <p> and you've reached my website.</p>
+    <h1> Hello, and welcome to Sam Aronson's website </h1>
     <p>I am a student at <a href="https://haverford.edu">Haverford College</a> studying Computer Science and Philosophy. I am currently looking for opportunities for Summer 2021. For more information, please check out my <a href="/resume.pdf">resume</a>, <a href="https://www.linkedin.com/in/samaronson/">LinkedIn</a>, or <a href="https://github.com">GitHub</a>. Also, feel free to drop me a line at saronson (at) haverford.edu. Thank you for stopping by!
   </body>
 </html>
