--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   </head>
   <body>
     <h1> Hello, and welcome to Sam Aronson's website </h1>
-    <p>I am a student at <a href="https://haverford.edu">Haverford College</a> studying Computer Science and Philosophy. I am currently looking for opportunities for Summer 2021. For more information, please check out my <a href="/resume.pdf">resume</a>, <a href="https://www.linkedin.com/in/samaronson/">LinkedIn</a>, or <a href="https://github.com">GitHub</a>. Also, feel free to drop me a line at saronson (at) haverford.edu. Thank you for stopping by!
+    <p>I am a student at <a href="https://haverford.edu">Haverford College</a> studying Computer Science and Philosophy. I am interested in exploring and working in the intersection of expression and computation, with experience in a number of different paradigms and frameworks. I am currently looking for opportunities for Summer 2021. </p>
+    <p>For more information, please check out my <a href="/resume.pdf">resume</a>, <a href="https://www.linkedin.com/in/samaronson/">LinkedIn</a>, or <a href="https://github.com">GitHub</a>. Also, feel free to drop me a line at saronson (at) haverford.edu. </p>
+    <p>Thank you for stopping by!</p>
   </body>
 </html>
