add youtube video

--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <p>I am a student at <a href="https://haverford.edu">Haverford College</a> studying Computer Science and Philosophy. I am interested in exploring and working in the intersection of expression and computation, with experience in a number of different paradigms and frameworks. I will be interning with <a href="https://amazon.com">Amazon</a> this summer as a Software Development Engineer. </p>
     <p>For more information, please check out my <a href="/resume.pdf">resume</a>, <a href="https://www.linkedin.com/in/samaronson/">LinkedIn</a>, or <a href="https://github.com">GitHub</a>. Also, feel free to drop me a line at saronson (at) haverford.edu. </p>
     <p>Thank you for stopping by!</p>
+    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/Yq1EWzC86OM?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   </body>
 </html>
