--- a/index.html
+++ b/index.html
@@ -13,8 +13,16 @@
   </head>
   <body>
     <h1> Hello, and welcome to Sam Aronson's website </h1>
-    <p>I am a student at <a href="https://haverford.edu">Haverford College</a> studying Computer Science and Philosophy. I am interested in exploring and working in the intersection of expression and computation, with experience in a number of different paradigms and frameworks. I will be interning with <a href="https://amazon.com">Amazon</a> this summer as a Software Development Engineer. </p>
-    <p>For more information, please check out my <a href="/resume.pdf">resume</a>, <a href="https://www.linkedin.com/in/samaronson/">LinkedIn</a>, or <a href="https://github.com">GitHub</a>. Also, feel free to drop me a line at saronson (at) haverford.edu. </p>
+    <p>I'm currently working as a software engineer in Seattle, WA. I am interested in exploring and working at the intersection of interpretive expression and computation. I'm currently working on Amazon Rekognition's stored video capabilities. </p>
+    <p>I am an alumni of <a href="https://haverford.edu">Haverford College</a>, where I studied Philosophy and Computer Science. 
+    <p>For more information, please check out my <a href="/resume.pdf">resume</a>, <a href="https://www.linkedin.com/in/samaronson/">LinkedIn</a>, or <a href="https://github.com">GitHub</a>. Also, feel free to drop me a line at s (at) m<lastname>.co </p>
     <p>Thank you for stopping by!</p>
+
+    <h2>Projects</h2>
+    <ul>
+      <li>
+        <b><a href="https://aphorismaday.com">Aphorism a Day</a></b>: a website sharing an aphorism of Friedrich Nietzsche's each day.
+      </li>
+    </ul>
   </body>
 </html>
