update email reference; add link to rek

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   </head>
   <body>
     <h1> Hello, and welcome to Sam Aronson's website </h1>
-    <p>I'm currently working as a software engineer in Seattle, WA. I am interested in exploring and working at the intersection of interpretive expression and computation. I'm currently working on Amazon Rekognition's stored video capabilities. </p>
+    <p>I'm currently working as a software engineer in Seattle, WA. I am interested in exploring and working at the intersection of interpretive expression and computation. I'm currently working on <a href="https://aws.amazon.com/rekognition/video-features/">Amazon Rekognition's stored video capabilities.</a></p>
     <p>I am an alumni of <a href="https://haverford.edu">Haverford College</a>, where I studied Philosophy and Computer Science. 
-    <p>For more information, please check out my <a href="/resume.pdf">resume</a>, <a href="https://www.linkedin.com/in/samaronson/">LinkedIn</a>, or <a href="https://github.com">GitHub</a>. Also, feel free to drop me a line at s (at) m<lastname>.co </p>
+    <p>For more information, please check out my <a href="/resume.pdf">resume</a>, <a href="https://www.linkedin.com/in/samaronson/">LinkedIn</a>, or <a href="https://github.com">GitHub</a>. Also, feel free to drop me a line at s (at) m[lastname].co </p>
     <p>Thank you for stopping by!</p>
 
     <h2>Projects</h2>
